--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+          git config user.name "amitbansal26"
+          git config user.email "amitbansal26@users.noreply.github.com"
 
       - name: Install Helm
         uses: azure/setup-helm@v3
