--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
         env:
-          CR_TOKEN: "${{ env.CR_TOKEN}}"
+          CR_TOKEN: "${{ secret.CR_TOKEN}}"
