--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -28,5 +28,5 @@ jobs:
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.5.0
-        env:
+        with:
           CR_TOKEN: "${{ secrets.CR_TOKEN}}"
