--- a/charts/cassandra/Chart.yaml
+++ b/charts/cassandra/Chart.yaml
@@ -20,7 +20,7 @@ keywords:
 - nosql
 maintainers:
 - name: Bitnami
-  url: https://github.com/bitnami/charts
+  url: https://amitbansal26.github.io/sunbird-helm-chart/
 name: cassandra
 sources:
 - https://github.com/bitnami/containers/tree/main/bitnami/cassandra
