Added Chart Repo for flink jobs

--- a/.github/workflows/sunbird-helm-test.yml
+++ b/.github/workflows/sunbird-helm-test.yml
@@ -38,4 +38,4 @@ jobs:
         if: ${{ needs.list-changed.outputs.changed }} == 'true'
 
       - name: Run chart-testing (install)
-        run: ct install --config sunbird-helm-test.yaml
+        run: ct install --config ct.yaml
